# textonboost

./: CMakeLists.txt  README.md  textonize_all.sh
cmake/: FindTBB.cmake
src/: CMakeLists.txt  config.h.in  evaluate.cpp  settings.h  textonboost.cpp  textonize.cpp  textonview.cpp
src/algorithm/: CMakeLists.txt  jointboost.cpp  jointboost.h  kmeans.cpp  kmeans.h
src/classifier/: CMakeLists.txt  textonboost.cpp  textonboost.h  weakclassifier.cpp  weakclassifier.h
src/feature/: CMakeLists.txt  bboxfeature.cpp  bboxfeature.h  colorfeature.cpp  colorfeature.h  feature.cpp  feature.h  filterbank.cpp  filterbank.h  hogfeature.cpp  hogfeature.h  locationfeature.cpp  locationfeature.h  texton.cpp  texton.h
src/util/: CMakeLists.txt  colorconvertion.cpp  colorconvertion.h  colorimage.cpp  colorimage.h  image.cpp  image.h  labelimage.cpp  labelimage.h  segmentationimage.cpp  segmentationimage.h  util.cpp  util.h
